<resources xmlns:tools="http://schemas.android.com/tools">
    <string-array name="data_name">
        <item>Black Coffee</item>
        <item>Palm Sugar Coffee</item>
        <item>Dalgona Coffee</item>
        <item>Latte</item>
        <item>Milk Coffee</item>
        <item>Caramel Macchiato</item>
        <item>Tiramisu Coffee</item>
        <item>V60 Coffee</item>
        <item>Vietnamese Coffee</item>
        <item>Avocado Coffee</item>
        <item>Matcha Latte</item>
        <item>French Press</item>
    </string-array>
    <string-array name="data_description">
        <item>This rich and bold coffee is brewed to perfection without any added milk or sugar, offering a pure, robust flavor for true coffee lovers.</item>
        <item>Combining coffee, milk, and the natural sweetness of palm sugar, this drink features a rich caramel-like flavor that complements the boldness of the coffee.</item>
        <item>Whipped coffee made by beating instant coffee, sugar, and hot water until fluffy, then served over cold or warm milk for a frothy, creamy treat.</item>
        <item>Featuring a smooth layer of steamed milk over a shot of espresso, the latte creates a velvety texture and mellow flavor that’s perfect for any time of day.</item>
        <item>Combining the boldness of coffee with the creaminess of milk, this classic beverage delivers a balanced taste for a delightful experience.</item>
        <item>Espresso-based with steamed milk, a hint of vanilla, and a rich caramel drizzle, this indulgent drink balances bold espresso with smooth, creamy flavors.</item>
        <item>A delightful fusion of classic coffee and the famous Italian dessert, tiramisu. This coffee combines the sweetness of cream and chocolate with the rich, smooth aroma of coffee. Perfect for those who enjoy the blend of a sweet dessert and the bold elegance of coffee.</item>
        <item>Meticulously brewed using a V60 dripper, this pour-over coffee highlights the delicate flavors and aromas of the coffee beans with a clean and smooth finish.</item>
        <item>Strong and sweet, this coffee is brewed with dark roasted coffee beans ground to a medium roast using a drip filter, often served with sweetened condensed milk.</item>
        <item>This drink brings together the smooth, creamy freshness of avocado with the bold, distinctive taste of coffee. Avocado Coffee offers a unique flavor experience, where the softness of avocado perfectly complements the bittersweetness of coffee, creating a delicious and refreshing harmony.</item>
        <item>This drink blends finely ground green tea (matcha) with steamed milk, offering a slightly sweet, refreshing, and earthy flavor that’s both energizing and soothing.</item>
        <item>Brewed with a French press, this coffee offers a rich, full-bodied flavor with a smooth and robust taste that’s achieved through steeping coarsely ground coffee in hot water.</item>
    </string-array>
    <string-array name="data_category">
        <item>Hot</item>
        <item>Cold</item>
        <item>Cold</item>
        <item>Hot</item>
        <item>Hot</item>
        <item>Cold</item>
        <item>Cold</item>
        <item>Hot</item>
        <item>Hot</item>
        <item>Cold</item>
        <item>Hot</item>
        <item>Hot</item>
    </string-array>
    <string-array name="data_ingredients">
        <item>1. 12g fine grind coffee (around 2 tablespoons)\n2. 200ml water\n3. 4–8g sugar(optional)</item>
        <item>1. 12g instant coffee/coffee without grounds (around 1 tablespoons)\n2. 100ml water\n3. 30–40ml liquid palm sugar\n4. 100ml milk\n5. Ice cubes</item>
        <item>1. 12g instant coffee/coffee without grounds (around 2 tablespoons)\n2. 12g sugar(around 2 tablespoons)\n3. 12ml water(around 2 tablespoons)\n4. 200ml milk\n5. Ice cubes</item>
        <item>1. 12g fine grind coffee (around 2 tablespoons)\n2. 150ml hot milk\n3. 30–40ml water</item>
        <item>1. 12g fine grind coffee (around 2 tablespoons)\n2. 100ml water\n3. 100ml hot milk</item>
        <item>1. 12g instant coffee/coffee without grounds (around 2 tablespoons)\n2. 50ml water\n3. 30–40ml caramel syrup\n4. 150ml milk\n5. Ice cubes</item>
        <item>1. 12g instant coffee/coffee without grounds (around 2 tablespoons)\n2. 50ml water\n3. 30–40ml tiramisu syrup\n4. 150ml milk\n5. Ice cubes</item>
        <item>1. 12g medium grind coffee (around 2 tablespoons)\n2. 200ml water\n3. 4–8g sugar(optional)</item>
        <item>1. 12g medium grind coffee (around 2 tablespoons)\n2. 200ml water\n3. 20–30ml sweetened condensed milk</item>
        <item>1. 12g instant coffee/coffee without grounds (around 2 tablespoons)\n2. 50ml water\n3. ½ ripe avocado\n4. 4–8g sugar\n5. 150ml freshly milk\n6. Ice cubes</item>
        <item>1. 12g fine grind coffee (around 2 tablespoons)\n2. 150ml hot milk\n3. 2g matcha powder\n4. 30–40ml water</item>
        <item>1. 12g coarsely ground coffee\n2. 200ml water\n3. 4–8g sugar (optional)</item>
    </string-array>
    <string-array name="data_tools">
        <item>1. Small pot or kettle\n2. Cup or mug\n3. Spoon</item>
        <item>1. Small pot or kettle\n2. Collin glass\n3. Spoon</item>
        <item>1. Bowl\n2. Hand mixer or whisk\n3. Collin glass\n4. Spoon </item>
        <item>1. Small pot or kettle\n2. Frenchpress\n3. Milk jug\n4. Cup or mug\n5. Spoon</item>
        <item>1. Small pot or kettle\n2. Cup or mug\n3. Spoon</item>
        <item>1. Small pot or kettle\n2. Cup or mug\n3. Collin glass\n4. Spoon </item>
        <item>1. Small pot or kettle\n2. Cup or mug\n3. Collin glass\n4. Spoon </item>
        <item>1. Small pot or kettle\n2. V60 dripper\n3. Paper filter\n4. Cup or mug\n5. Spoon</item>
        <item>1. Small pot or kettle\n2. Vietnam drip\n3. Cup or mug\n4. Spoon</item>
        <item>1. Small pot or kettle\n2. Blender\n3. Collin glass\n4. Spoon</item>
        <item>1. Small pot or kettle\n2. Frenchpress\n3. Milk jug\n4. Cup or mug\n5. Spoon</item>
        <item>1. Small pot or kettle\n2. French press\n3. Cup or mug\n4. Spoon</item>

    </string-array>
    <string name="description">Description</string>
    <string name="search_here" tools:ignore="TypographyEllipsis">Search here...</string>
    <string name="app_desc">Find your favorite brew!</string>
    <string name="coffee_name">Coffee Name</string>
    <string name="category_name">Category</string>
    <string name="about">About</string>
    <string name="action_share">Action Share</string>
    <string name="serving_steps">Serving Steps</string>
    <string name="tools">Tools</string>
    <string name="ingredients">Ingredients</string>
    <string name="back_button">Back Button</string>
    <string name="image_item">Image Item</string>
    <string name="hot_category">Hot</string>
    <string name="cold_category">Cold</string>
    <string name="all_category">All</string>
</resources>