<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context=".DetailActivity">

    <ImageView
        android:id="@+id/img_detail_photo"
        android:layout_width="0dp"
        android:layout_height="150dp"
        android:contentDescription="@string/image_item"
        android:src="@drawable/latte"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_background"
        android:backgroundTint="@color/colorPrimaryDark"
        android:src="@drawable/ic_back"
        android:scaleType="fitCenter"
        android:padding="8dp"
        android:layout_margin="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/back_button" />

    <ImageButton
        android:id="@+id/action_share"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:background="@drawable/rounded_background"
        android:backgroundTint="@color/colorPrimaryDark"
        android:src="@drawable/ic_share"
        android:scaleType="fitCenter"
        android:padding="8dp"
        android:layout_margin="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/back_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/back_button"
        app:tint="@color/white"
        android:contentDescription="@string/action_share" />

    <TextView
        android:id="@+id/tv_detail_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:fontFamily="@font/averta_std_bold"
        android:text="@string/coffee_name"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@id/category_layout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/category_layout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/category_layout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@id/img_detail_photo"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageView
            android:id="@+id/ic_detail_category"
            android:layout_width="16dp"
            android:layout_height="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:src="@drawable/ic_hot"
            android:importantForAccessibility="no" />

        <TextView
            android:id="@+id/tv_detail_category"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/category_name"
            android:layout_marginStart="4dp"
            android:fontFamily="@font/averta_std_bold"
            app:layout_constraintStart_toEndOf="@id/ic_detail_category"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:fillViewport="true"
        android:background="@drawable/rounded_top_background"
        app:layout_constraintTop_toBottomOf="@id/category_layout"
        app:layout_constraintBottom_toBottomOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp">

            <TextView
                android:id="@+id/tv_label_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="14sp"
                android:text="@string/about"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/averta_std_bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_detail_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="12sp"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/averta_std_regular"
                app:layout_constraintTop_toBottomOf="@id/tv_label_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_label_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                android:text="@string/ingredients"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/averta_std_bold"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_detail_ingredients"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="12sp"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/averta_std_regular"
                app:layout_constraintTop_toBottomOf="@id/tv_label_ingredients"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_label_tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                android:text="@string/tools"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/averta_std_bold"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_ingredients"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_detail_tools"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="12sp"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/averta_std_regular"
                app:layout_constraintTop_toBottomOf="@id/tv_label_tools"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_label_serving_steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textSize="14sp"
                android:text="@string/serving_steps"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/averta_std_bold"
                app:layout_constraintTop_toBottomOf="@id/tv_detail_tools"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <TextView
                android:id="@+id/tv_detail_serving_steps"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:textSize="12sp"
                android:textColor="@color/colorPrimary"
                android:fontFamily="@font/averta_std_regular"
                app:layout_constraintTop_toBottomOf="@id/tv_label_serving_steps"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>