<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="16dp"
    app:cardElevation="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:padding="16dp">

        <ImageView
            android:id="@+id/img_item_photo"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:src="@drawable/latte"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_item_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:fontFamily="@font/averta_std_bold"
            android:gravity="center_horizontal"
            android:maxLines="1"
            android:text="@string/coffee_name"
            android:textColor="@color/white"
            android:textSize="14sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_item_photo" />

        <TextView
            android:id="@+id/tv_item_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:textSize="12sp"
            android:maxLines="2"
            android:ellipsize="end"
            android:textColor="@color/light_gray"
            android:text="@string/description"
            android:fontFamily="@font/averta_std_regular"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/tv_item_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/category_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent">

            <ImageView
                android:id="@+id/img_item_category"
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/ic_hot"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:importantForAccessibility="no" />

            <TextView
                android:id="@+id/tv_item_category"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/averta_std_regular"
                android:text="@string/category_name"
                android:textSize="12sp"
                app:layout_constraintStart_toEndOf="@id/img_item_category"
                app:layout_constraintTop_toTopOf="@id/img_item_category"
                app:layout_constraintBottom_toBottomOf="@id/img_item_category"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>