<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_bottom_appbar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <ImageView
                android:id="@+id/about_page"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:background="@drawable/rounded_background"
                android:contentDescription="@string/about"
                android:padding="8dp"
                android:src="@drawable/ic_about"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:tint="@color/colorPrimaryDark" />

            <TextView
                android:id="@+id/app_desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:fontFamily="@font/averta_std_bold"
                android:text="@string/app_desc"
                android:textColor="@color/white"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/about_page"
                app:layout_constraintEnd_toStartOf="@id/about_page"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <SearchView
                android:id="@+id/searchView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:background="@drawable/rounded_background"
                android:iconifiedByDefault="false"
                android:queryHint="@string/search_here"
                android:searchIcon="@drawable/ic_search"
                android:theme="@style/SearchViewStyle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/about_page"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/category_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/searchView">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/all_category"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_background"
                    android:padding="8dp"
                    app:layout_constraintEnd_toStartOf="@id/hot_category"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/icon_all"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:contentDescription="@string/all_category"
                        android:src="@drawable/ic_all"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/cat_all"
                        app:tint="@color/colorPrimaryDark" />

                    <TextView
                        android:id="@+id/cat_all"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/averta_std_regular"
                        android:text="@string/all_category"
                        android:textColor="@color/colorPrimaryDark"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/icon_all"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/hot_category"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:padding="8dp"
                    app:layout_constraintEnd_toStartOf="@id/cold_category"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/all_category"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/icon_hot"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:contentDescription="@string/hot_category"
                        android:src="@drawable/ic_hot"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/cat_hot"
                        app:tint="@color/light_gray" />

                    <TextView
                        android:id="@+id/cat_hot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/averta_std_regular"
                        android:text="@string/hot_category"
                        android:textColor="@color/light_gray"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/icon_hot"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/cold_category"
                    android:layout_width="64dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:padding="8dp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@id/hot_category"
                    app:layout_constraintTop_toTopOf="parent">

                    <ImageView
                        android:id="@+id/icon_cold"
                        android:layout_width="16dp"
                        android:layout_height="16dp"
                        android:contentDescription="@string/cold_category"
                        android:src="@drawable/ic_cold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@id/cat_cold"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:tint="@color/light_gray" />

                    <TextView
                        android:id="@+id/cat_cold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/averta_std_regular"
                        android:text="@string/cold_category"
                        android:textColor="@color/light_gray"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@id/icon_cold"
                        app:layout_constraintTop_toTopOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_coffee"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:clipToPadding="false"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/appbar_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>